workloads/compreface/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compreface-admin
  namespace: compreface
  labels:
    app: compreface
    component: admin
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: compreface
      component: admin
  template:
    metadata:
      labels:
        app: compreface
        component: admin
    spec:
      containers:
        - name: admin
          image: exadel/compreface-admin:1.2.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
