workloads/compreface/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compreface-api
  namespace: compreface
  labels:
    app: compreface
    component: api
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: compreface
      component: api
  template:
    metadata:
      labels:
        app: compreface
        component: api
    spec:
      containers:
        - name: api
          image: exadel/compreface-api:1.2.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
