workloads/compreface/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compreface-admin
  namespace: compreface
spec:
  selector:
    app: compreface
    component: admin
  ports:
    - port: 8080
      targetPort: 8080
