workloads/compreface/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compreface-core
  namespace: compreface
spec:
  selector:
    app: compreface
    component: core
  ports:
    - port: 3000
      targetPort: 3000
