workloads/compreface/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compreface-ui
  namespace: compreface
spec:
  selector:
    app: compreface
    component: ui
  ports:
    - port: 80
      targetPort: 80
