workloads/compreface/admin-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compreface-admin
  namespace: compreface
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - compreface-admin
  defaultBackend:
    service:
      name: compreface-admin
      port:
        number: 8080
