workloads/compreface/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compreface
  namespace: compreface
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - compreface
  defaultBackend:
    service:
      name: compreface-ui
      port:
        number: 80
