workloads/compreface/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: compreface
  namespace: compreface
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`compreface.bapttf.com`)
      kind: Rule
      services:
        - name: compreface-ui
          port: 80
  tls:
    certResolver: letsencrypt
